# langchain

docs/: aethermind-enterprise-architecture.md  internal-platform-plan.md
docs/aethermind/: 01-项目规划.md  02-架构设计.md  03-数据模型与API.md  04-智能体运行时.md  05-阶段能力规划.md  06-IntentGate集成.md  07-企业加固规划.md  08-实施与运维.md  09-对标Hermes与规划修订.md  README.md
docs/intentgate/: 01-项目规划.md  02-架构设计.md  03-协议规范.md  04-通道与客户端.md  05-卡片系统.md  06-Agent后端对接.md  07-实施与运维.md  08-代码文件说明.md  README.md
learn/: .env  01_chat_models.py  02_prompt_templates.py  03_tools.py  04_chains_lcel.py  Java 程序员必备：Python 速查手册 (2).md  Java 程序员必备：Python 速查手册.md  README.md  requirements.txt  stage-1.md
learn/langchain/: .env  10_check_pointer.py  12_structured_output.py  requirements.txt
practice/: README.md
practice/aethermind/: .env  README.md  docker-compose.yml  交付清单.md
practice/intentgate/: .env.example  README.md  pyproject.toml  requirements.txt
practice/intentgate/cards/: crm_approve.yaml  query_summary.yaml
practice/intentgate/intentgate/: __init__.py  config.py  main.py
practice/intentgate/intentgate/adapters/: __init__.py  aethermind.py  agent_backend.py  agentscope.py  mock.py
practice/intentgate/intentgate/adapters/wecom/: __init__.py
practice/intentgate/intentgate/gateway/: api.py  router.py  session.py
practice/intentgate/intentgate/runtime/: card_runtime.py
practice/intentgate/intentgate/runtime/renderers/: base.py  wecom.py
practice/intentgate/intentgate/schemas/: __init__.py  message.py  reply.py
practice/intentgate/tests/: test_card_runtime.py
(+30 files in other folders)
