[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intentgate"
version = "0.1.0"
description = "Multi-channel card interaction gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "redis>=5.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["intentgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
